--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nuxt": "^3.16.2",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-carousel-3d": "^1.0.4"
   }
 }
