--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@iconify/vue": "^5.0.0",
     "@tailwindcss/vite": "^4.1.4",
     "@vueuse/motion": "^3.0.3",
     "gsap": "^3.12.7",
