--- a/package.json
+++ b/package.json
@@ -10,17 +10,26 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@iconify/vue": "^5.0.0",
+    "@nuxt/icon": "^1.12.0",
+    "@nuxt/ui": "^3.1.1",
+    "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.4",
     "@vueuse/motion": "^3.0.3",
     "gsap": "^3.12.7",
     "nuxt": "^3.16.2",
-    "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue3-carousel-3d": "^1.0.4"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@tailwindcss/postcss": "^4.1.5",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^4.1.5"
   }
 }
